--- a/css/main.css
+++ b/css/main.css
@@ -1151,6 +1151,14 @@ body {
     align-items: center;
 }
 
+.nav ul a {
+    font-family: "Proxima Nova";
+    font-weight: 600;
+    color: #707070;
+    letter-spacing: 1px;
+    font-size: 16px;
+}
+
 .nav ul {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1160,11 +1168,6 @@ body {
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    font-family: "Proxima Nova";
-    font-weight: 600;
-    color: #707070;
-    letter-spacing: 1px;
-    font-size: 16px;
 }
 
 .nav ul li {
@@ -1174,7 +1177,7 @@ body {
     transition: 0.2s;
 }
 
-.nav ul li:hover {
+.nav ul li a:hover {
     -webkit-transition: 0.2s;
     -o-transition: 0.2s;
     transition: 0.2s;
@@ -1183,7 +1186,7 @@ body {
     color: #ee3d40;
 }
 
-.nav ul .active {
+.nav ul .active a {
     color: #ee3d40;
 }
 
@@ -1266,6 +1269,32 @@ body {
     text-align: center;
     position: absolute;
     padding-top: 15px;
+}
+
+.breadcrum ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 2px;
+}
+
+.breadcrum ul li a {
+    color: #939393;
+    text-decoration: none;
+}
+
+.breadcrum ul li.last-child {
+    color: #333333;
+}
+
+.breadcrum ul li a:after {
+    content: "/";
+    color: #939393;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .container {
