--- a/css/main.css
+++ b/css/main.css
@@ -1348,10 +1348,15 @@ body {
 }
 
 .video-fullscreen video {
-    height: 100%;
+    width: 100%;
 }
 
 @media (max-width: 1199px) {
+    .video-fullscreen video {
+        width: auto;
+        height: 100%;
+    }
+
     .video-fullscreen {
         top: -150px;
         bottom: -150px;
@@ -1361,9 +1366,14 @@ body {
 }
 
 @media (max-width: 991px) {
+    .video-fullscreen video {
+        width: auto;
+        height: 100%;
+    }
+
     .video-fullscreen {
         top: -344px;
-        bottom: -150px;
+        bottom: -100px;
         right: -150px;
         left: -279px;
     }
